# correspondencia

./: Makefile  README.md  appmap.yml  db.sqlite3  manage.py  pyproject.toml  pytest.ini
core/: conftest.py
core/correspondencia/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/correspondencia/migrations/: 0001_initial.py  0002_alter_correspondencia_almacenado_az.py  0003_auto_20221121_1834.py  0004_alter_correspondencia_id.py
core/correspondencia/tests/: test_models.py
proyectoCorrespondencia/: settings.py  urls.py  wsgi.py
static/css/: bootstrap-datepicker.min.css  style.css
templates/: archivo.html  base.html  entrada.html  index.html  salida.html
