[tool.poetry]
name = "correspondencia"
version = "0.1.0"
description = ""
authors = ["jmjaramillob <jmjaramillob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"
pymysql = "1.1.0"
cryptography = "^41.0.3"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.7.0"
pytest = "^7.4.0"
pytest-django = "4.5.2"
pytest-watch = "4.2.0"
pytest-watcher = "0.3.4"
pytest-cov = "4.1.0"
pre-commit = "3.3.3"
model-bakery = "1.15.0"

[tool.commitizen]
version = "1.0.0"
version_files = [ "pyproject.toml:version", "__version__.py",]
update_changelog_on_bump = true
version_scheme = "semver"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
